Adding viewss / basic styling

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,2 +1,7 @@
 %h1
-  This is a headerz
+  MailMan
+
+%p
+  MailMan is a logging tool written by Vincent Chu (vince [at] posterous-inc.com). It was designed to log a high volume of email into redis for later analysis and monitoring.
+
+
