--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,6 +3,7 @@
   %head
     %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"} 
     %script{:src => "/js/flot/jquery.flot.js"}
+    %link{:rel => "stylesheet", :href => "/css/main.css"}
 
   %body
     #center_body
