--- a/views/tag.haml
+++ b/views/tag.haml
@@ -1,24 +1,26 @@
 %h1= "#{@tag.name}"
 
-.summary
+.summary.section
   %h2 Summary
 
   .content
     .counters
-      .count
-        - [[:today, "Today"], [:avg_last_week, "Last Week"], [:avg_last_two_weeks, "Last Two Weeks"]].each do |type|
+      - [[:today, "Today"], [:avg_last_week, "Last Week"], [:avg_last_two_weeks, "Last Two Weeks"]].each do |type|
+        .count
           = haml :_counter, :locals => {:count => @counts[type.first], :name => type.last}
 
     .plot
       #data_plot
 
-.messages
+.messages.section
   %h2 Messages
-  - @mesgs.keys.sort.each do |date|
-    %h3
-      = date.strftime("%A, %b %d")
-    .messages_pane
-      = haml :_messages, :locals => { :messages => @mesgs[date] }
+  
+  .list
+    - @mesgs.keys.sort.each do |date|
+      %h3
+        = date.strftime("%A, %b %d")
+      .messages_pane
+        = haml :_messages, :locals => { :messages => @mesgs[date] }
 
 %script
   = %Q[var _data = #{@history.to_json};]
