Reverse message list by date so that most recent appears at top

--- a/views/tag.haml
+++ b/views/tag.haml
@@ -16,7 +16,7 @@
   %h3= %Q[Messages (#{@summary[:messages].count} of #{@total})]
   
   .list
-    - @mesgs.keys.sort.each do |date|
+    - @mesgs.keys.sort.reverse_each do |date|
       %h3
         = date.strftime("%A, %b %d")
       .messages_pane
